1. 포탈 / 텔레포트 이펙트 생성 2. 레벨 전환 구현 3. 포탈 기능 구현

--- a/Project/Scripts/Scripts.vcxproj.filters
+++ b/Project/Scripts/Scripts.vcxproj.filters
@@ -61,6 +61,12 @@
     <ClInclude Include="CHitSparkScript.h">
       <Filter>Scripts\Object</Filter>
     </ClInclude>
+    <ClInclude Include="CPortalScript.h">
+      <Filter>Scripts\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="CTeleportScript.h">
+      <Filter>Scripts\Object</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -121,6 +127,12 @@
       <Filter>Scripts\Boss</Filter>
     </ClCompile>
     <ClCompile Include="CHitSparkScript.cpp">
+      <Filter>Scripts\Object</Filter>
+    </ClCompile>
+    <ClCompile Include="CPortalScript.cpp">
+      <Filter>Scripts\Object</Filter>
+    </ClCompile>
+    <ClCompile Include="CTeleportScript.cpp">
       <Filter>Scripts\Object</Filter>
     </ClCompile>
   </ItemGroup>
