--- a/Project/Scripts/Scripts.vcxproj
+++ b/Project/Scripts/Scripts.vcxproj
@@ -177,10 +177,12 @@ call CodeGen.exe
     <ClInclude Include="CMarkerScript.h" />
     <ClInclude Include="CMAttackScript.h" />
     <ClInclude Include="CPlatformScript.h" />
+    <ClInclude Include="CPortalScript.h" />
     <ClInclude Include="CSlashScript.h" />
     <ClInclude Include="CPlayerScript.h" />
     <ClInclude Include="CScriptMgr.h" />
     <ClInclude Include="CSpawnerScript.h" />
+    <ClInclude Include="CTeleportScript.h" />
     <ClInclude Include="CTriggerScript.h" />
     <ClInclude Include="CursorScript.h" />
     <ClInclude Include="CWaterScript.h" />
@@ -199,10 +201,12 @@ call CodeGen.exe
     <ClCompile Include="CMarkerScript.cpp" />
     <ClCompile Include="CMAttackScript.cpp" />
     <ClCompile Include="CPlatformScript.cpp" />
+    <ClCompile Include="CPortalScript.cpp" />
     <ClCompile Include="CSlashScript.cpp" />
     <ClCompile Include="CPlayerScript.cpp" />
     <ClCompile Include="CScriptMgr.cpp" />
     <ClCompile Include="CSpawnerScript.cpp" />
+    <ClCompile Include="CTeleportScript.cpp" />
     <ClCompile Include="CTriggerScript.cpp" />
     <ClCompile Include="CursorScript.cpp" />
     <ClCompile Include="CWaterScript.cpp" />
